--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --nav-color: #0b0491;
+  --nav-color: #87bdff;
   --section-about: #f3f3f3;
   --section-produk: #ebebeb;
   --section-contact: #d1d1d1;
@@ -25,7 +25,7 @@ body {
  position: fixed;
  top: 0;
  width: 100%;
- background-color: white;
+ background-color: var(--nav-color);
  box-shadow: 0 1px 6px 1px gray ;
 }
 
@@ -55,7 +55,7 @@ ul li {
 }
 
 nav {
-  width: 50%;
+  width: 40%;
   min-width: 20%;
 }
 
@@ -64,6 +64,48 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+
+section {
+  padding-top: 130px;
+  padding-bottom: 100px; 
+  background-color: var(--section-about);
+}
+
+#about .con-title {
+  display: flex;
+  justify-content: center;
+}
+
+section h1 {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  width: fit-content;
+  position: relative;
+  padding: 1.2rem 0;
+}
+
+section h1::after {
+  content: "";
+  position: absolute;
+  width: 40%;
+  height: 3px;
+  bottom: 0;
+  left: 23px;
+  background-color: #3903ff;
+}
+
+section p {
+  text-align: justify;
+  margin: 2.3em 0;
+  font-size: 1.1em;
+}
+
+.container-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 
 @media screen and (max-width: 900px) {
   .flex-nav {
